@startuml
skinparam useBetaStyle true
skinparam linetype ortho

<style>
    classDiagram{
        FontColor Black
        BackgroundColor White
        LineThickness 2
        LineColor Black
        RoundCorner 10
    }
</style>
class HullProfile {
hight: int
width: int
position: int
}
class Hull {
lenght: int
profile: HullProfile
mass: float
}
HullProfile <-- Hull
class Flap {
}
class WingSegment {
nose_inner: ndarray
nose_outer: ndarray
back_inner: ndarray
back_outer: ndarray
mass: float
area: float
volume: float
}
class TEmpennage {
elevator: List[WingSegment]
airfoil_e: str
rudder: List[WingSegment]
airfoil_r: str
mass: float
}
WingSegment <-- TEmpennage
WingSegment <-- TEmpennage
class VEmpennage {
segments: List[WingSegment]
mass: float
}
WingSegment <-- VEmpennage
class EmpennageType {
typ: TEmpennage | VEmpennage
}
TEmpennage <-- EmpennageType
VEmpennage <-- EmpennageType
class Wing {
segments: List[WingSegment]
airfoil: str
mass: float
}
WingSegment <-- Wing
class Plane {
name: str
empennage: EmpennageType
wing: Wing
hull: Hull
mass: float
}
EmpennageType <-- Plane
Wing <-- Plane
Hull <-- Plane
@enduml